<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1"
		android:layout_height="wrap_content" android:padding="10dip" android:paddingBottom="25dip">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:orientation="vertical" android:paddingBottom="25dip">
		<TextView android:text="@string/lang_title" android:id="@+id/textView1"
			android:gravity="center" android:layout_height="wrap_content"
			android:padding="5dip" android:layout_width="fill_parent" android:layout_marginLeft="30dip" android:layout_marginRight="30dip"></TextView>
	<LinearLayout android:gravity="center_vertical"
		android:paddingBottom="10dip" android:paddingTop="10dip"
		android:paddingLeft="20dip" android:id="@+id/catalan"
		android:layout_width="fill_parent" android:paddingRight="20dip"
		android:layout_height="wrap_content" android:clickable="true">
		<ImageView android:src="@drawable/icon"
			android:layout_width="wrap_content" android:id="@+id/imageView1"
			android:layout_height="wrap_content"></ImageView>
		<TextView android:text="@string/lang_catalan" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_marginLeft="5dip" android:textSize="20dip"></TextView>
	</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:paddingBottom="10dip" android:paddingTop="10dip"
			android:paddingLeft="20dip" android:orientation="horizontal"
			android:id="@+id/spanish" android:layout_width="fill_parent"
			android:paddingRight="20dip" android:layout_height="wrap_content" android:clickable="true">
			<ImageView android:src="@drawable/icon" android:id="@+id/imageView2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
			<TextView android:text="@string/lang_spanish" android:id="@+id/textView3"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="5dip" android:textSize="20dip"></TextView>
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:paddingBottom="10dip" android:paddingTop="10dip"
			android:paddingLeft="20dip" android:orientation="horizontal"
			android:id="@+id/english" android:layout_width="fill_parent"
			android:paddingRight="20dip" android:layout_height="wrap_content" android:clickable="true">
			<ImageView android:src="@drawable/icon" android:id="@+id/imageView3"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
			<TextView android:text="@string/lang_english" android:id="@+id/textView4"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="5dip" android:textSize="20dip"></TextView>
		</LinearLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>
