<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/background" android:orientation="vertical" android:gravity="center">
	<LinearLayout android:layout_gravity="center_horizontal"
		android:padding="20dip" android:orientation="horizontal"
		android:layout_width="fill_parent" android:gravity="center_horizontal"
		android:layout_height="fill_parent" android:layout_weight="1">
		<ImageView android:layout_width="wrap_content" android:src="@drawable/icon"
			android:layout_height="wrap_content" android:padding="10dip"></ImageView>
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/imageView1"
			android:src="@drawable/logo"></ImageView>
	</LinearLayout>
	<TableLayout android:layout_height="fill_parent" android:layout_weight="1"
		android:layout_width="fill_parent">
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<LinearLayout android:layout_weight="1"
			android:layout_width="fill_parent" android:clickable="true"
			android:hapticFeedbackEnabled="true" android:id="@+id/option_villages"
			android:gravity="center_horizontal" android:orientation="vertical"
			android:layout_height="wrap_content">
			<ImageView android:layout_height="wrap_content"
				android:src="@drawable/ic_museum" android:layout_width="wrap_content"></ImageView>
			<TextView android:textColor="@color/text" android:text="@string/option_villages"
				android:id="@+id/textView2" android:layout_height="wrap_content"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
		<LinearLayout android:layout_weight="1"
			android:layout_width="fill_parent" android:clickable="true"
			android:hapticFeedbackEnabled="true" android:id="@+id/option_pois"
			android:gravity="center_horizontal" android:orientation="vertical"
			android:layout_height="wrap_content">
			<ImageView android:layout_height="wrap_content"
				android:src="@drawable/ic_tele" android:id="@+id/imageView4"
				android:layout_width="wrap_content"></ImageView>
			<TextView android:textColor="@color/text" android:text="@string/option_pois"
				android:id="@+id/textView3" android:layout_height="wrap_content"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
		<LinearLayout android:layout_weight="1"
			android:layout_width="fill_parent" android:clickable="true"
			android:hapticFeedbackEnabled="true" android:id="@+id/option_routes"
			android:gravity="center_horizontal" android:orientation="vertical"
			android:layout_height="wrap_content">
			<ImageView android:layout_height="wrap_content" android:id="@+id/imageView2"
				android:src="@drawable/ic_walk" android:layout_width="wrap_content"></ImageView>
			<TextView android:textColor="@color/text" android:text="@string/option_routes"
				android:id="@+id/textView1" android:layout_height="wrap_content"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
	<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:gravity="center_horizontal">
		<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/ic_triangle"></ImageView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option_shops" android:textColor="@color/text"></TextView>
	</LinearLayout>
	</TableRow>
	</TableLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="fill_parent" android:gravity="center" android:text="@string/about_small" android:paddingLeft="20dip" android:paddingRight="20dip"></TextView>
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/option_about"
			android:src="@drawable/catdroid_head" android:layout_gravity="right" android:paddingRight="20dip"></ImageView>
	</LinearLayout>
</LinearLayout>
